--- a/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -7,8 +7,8 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-   
-<p>
+<div class="col-6">
+    <p>
         Please check your email to confirm your account.
-</p>
-    
+    </p>
+</div>   
