--- a/Views/Home/CompanyDirectory.cshtml
+++ b/Views/Home/CompanyDirectory.cshtml
@@ -10,20 +10,29 @@
 @inject IBTCompanyInfoService CompanyInfoService
 @inject IBTRolesService RolesService
 
-@*@{
-    BTUser user = await UserManager.GetUserAsync(User);
+@{
+    ViewData["Title"] = "Directory";
+   
     int companyId = User.Identity.GetCompanyId().Value;
-    List<Notification> notifications = await NotificationService.GetReceivedNotificationsAsync(user.Id);
-    List<Project> projects = await ProjectService.GetUserProjectsAsync(user.Id);
-    IEnumerable<string> role = await RolesService.GetUserRolesAsync(user);
-    //List<Ticket> tickets = await TicketService.GetTicketsByUserIdAsync(user.Id, companyId);
-    //int ticketCount = tickets.Count();
-    //List<Project> projects = await ProjectService.GetUserProjectsAsync(user.Id);
-    //string MostRecentProject = await ProjectService.GetUserProjectsAsync();
+   
+}
 
-    ViewData["Title"] = "Dashboard";
-  
-}*@
+@*
+        List<BTUser> users = await _companyInfoService.GetAllMembersAsync(_companyId);
+        @{
+        BTUser user = await UserManager.GetUserAsync(User);
+        int companyId = User.Identity.GetCompanyId().Value;
+        List<Notification> notifications = await NotificationService.GetReceivedNotificationsAsync(user.Id);
+        List<Project> projects = await ProjectService.GetUserProjectsAsync(user.Id);
+        IEnumerable<string> role = await RolesService.GetUserRolesAsync(user);
+        //List<Ticket> tickets = await TicketService.GetTicketsByUserIdAsync(user.Id, companyId);
+        //int ticketCount = tickets.Count();
+        //List<Project> projects = await ProjectService.GetUserProjectsAsync(user.Id);
+        //string MostRecentProject = await ProjectService.GetUserProjectsAsync();
+
+        ViewData["Title"] = "Dashboard";
+
+    }*@
 <!-- BEGIN PAGE LEVEL STYLES -->
 <link rel="stylesheet" type="text/css" href="~/assets/css/forms/theme-checkbox-radio.css">
 <link href="~/plugins/jquery-ui/jquery-ui.min.css" rel="stylesheet" type="text/css" />
@@ -46,7 +55,6 @@
 
                 <div class="col-xl-8 col-lg-7 col-md-7 col-sm-5 text-sm-right text-center layout-spacing align-self-center">
                     <div class="d-flex justify-content-sm-end justify-content-center">
-                        <svg id="btn-add-contact" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user-plus"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><line x1="20" y1="8" x2="20" y2="14"></line><line x1="23" y1="11" x2="17" y2="11"></line></svg>
 
                         <div class="switch align-self-center">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-list view-list active-view"><line x1="8" y1="6" x2="21" y2="6"></line><line x1="8" y1="12" x2="21" y2="12"></line><line x1="8" y1="18" x2="21" y2="18"></line><line x1="3" y1="6" x2="3" y2="6"></line><line x1="3" y1="12" x2="3" y2="12"></line><line x1="3" y1="18" x2="3" y2="18"></line></svg>
@@ -121,71 +129,61 @@
                     </div>
                 </div>
             </div>
-
+           
             <div class="searchable-items list">
                 <div class="items items-header-section">
                     <div class="item-content">
                         <div class="">
-                            <div class="n-chk align-self-center text-center">
-                                <label class="new-control new-checkbox checkbox-primary">
-                                    <input type="checkbox" class="new-control-input" id="contact-check-all">
-                                    <span class="new-control-indicator"></span>
-                                </label>
-                            </div>
+
                             <h4>Name</h4>
                         </div>
                         <div class="user-email">
                             <h4>Email</h4>
                         </div>
                         <div class="user-location">
-                            <h4 style="margin-left: 0;">Location</h4>
+                            <h4 style="margin-left: 0;">Role</h4>
                         </div>
-                        <div class="user-phone">
-                            <h4 style="margin-left: 3px;">Phone</h4>
-                        </div>
+
                         <div class="action-btn">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2  delete-multiple"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
                         </div>
                     </div>
                 </div>
 
-                <div class="items">
-                    <div class="item-content">
-                        <div class="user-profile">
-                            <div class="n-chk align-self-center text-center">
-                                <label class="new-control new-checkbox checkbox-primary">
-                                    <input type="checkbox" class="new-control-input contact-chkbox">
-                                    <span class="new-control-indicator"></span>
-                                </label>
-                            </div>
-                            <img src="assets/img/90x90.jpg" alt="avatar">
-                            <div class="user-meta-info">
-                                <p class="user-name" data-name="Alan Green">Alan Green</p>
-                                <p class="user-work" data-occupation="Web Developer">Web Developer</p>
-                            </div>
-                        </div>
-                        <div class="user-email">
-                            <p class="info-title">Email: </p>
-                            <p class="usr-email-addr" data-email="alan@mail.com">alan@mail.com</p>
-                        </div>
-                        <div class="user-location">
-                            <p class="info-title">Location: </p>
-                            <p class="usr-location" data-location="Boston, USA">Boston, USA</p>
-                        </div>
-                        <div class="user-phone">
-                            <p class="info-title">Phone: </p>
-                            <p class="usr-ph-no" data-phone="+1 (070) 123-4567">+1 (070) 123-4567</p>
-                        </div>
-                        <div class="action-btn">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-2 edit"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg>
+                @foreach (BTUser user in await CompanyInfoService.GetAllMembersAsync(companyId))
+                {
+                    <div class="items">
+                        <div class="item-content">
+                            <div class="user-profile">
+                                <div class="n-chk align-self-center text-center">
 
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user-minus delete"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><line x1="23" y1="11" x2="17" y2="11"></line></svg>
+                                </div>
+                                @*<img src="assets/img/90x90.jpg" alt="avatar">*@
+                                <div class="user-meta-info">
+                                    <p class="user-name">@user.FullName</p>
+                                    <p class="user-work">Web Developer</p>
+                                </div>
+                            </div>
+                            <div class="user-email">
+                                <p class="info-title">Email: </p>
+                                <p class="usr-email-addr">@user.Email</p>
+                            </div>
+                            <div class="user-location">
+                                <p class="info-title">Phone Number: </p>
+                                <p class="usr-location">@user.PhoneNumber</p>
+                            </div>
+
+                            <div class="action-btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-2 edit"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg>
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user-minus delete"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><line x1="23" y1="11" x2="17" y2="11"></line></svg>
+                            </div>
                         </div>
                     </div>
+
+                }
                 </div>
-
-
-            </div>
+            
         </div>
     </div>
 </div>
