--- a/Views/Tickets/Details.cshtml
+++ b/Views/Tickets/Details.cshtml
@@ -256,7 +256,7 @@
                                 <img class="rounded bs-tooltip" title="@attachment.Description Created:@attachment.Created.ToString("MM-dd-yy  hh:mm tt")" src="@fileService.GetFileIcon(attachment.FileName)" alt="avatar">
                             }
                         </div>
-                        <button type="button" class="btn btn-success mb-2 mr-2" data-toggle="modal" data-target="#sliderModal">
+                        <button type="button" class="btn btn-success mb-2 mt-3 mr-2" data-toggle="modal" data-target="#sliderModal">
                             View Details
                         </button>
                         @foreach (TicketAttachment attachment in Model.Attachments)
